# ConsStream

./: ConsStream.cabal  LICENSE  README.md  ReStream.cabal
Data/: ConsStream.hs  ReStream.hs
